@@ -14,28 +14,35 @@
     <description>CH Service consuming kafka messages for Filing History Image Scan Requests</description>
 
     <properties>
-        <commons.lang.version>2.6</commons.lang.version>
+        <commons.lang3.version>3.14.0</commons.lang3.version>
         <java.version>21</java.version>
-        <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
-        <hamcrest-all-version>1.3</hamcrest-all-version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+        <hamcrest.version>2.2</hamcrest.version>
         <start-class>uk.gov.companieshouse.chdorderconsumer.ChdOrderConsumerApplication</start-class>
-        <structured-logging.version>3.0.1</structured-logging.version>
-        <kafka-models.version>3.0.1</kafka-models.version>
-        <environment-reader-library.version>3.0.0</environment-reader-library.version>
+        <structured-logging.version>3.0.4</structured-logging.version>
+        <kafka-models.version>3.0.7</kafka-models.version>
+        <environment-reader-library.version>3.0.1</environment-reader-library.version>
         <system-rules-version>1.17.2</system-rules-version>
-        <ch-kafka.version>3.0.0</ch-kafka.version>
-        <api-sdk-manager-java-library.version>3.0.1</api-sdk-manager-java-library.version>
-        <private-api-sdk-java.version>4.0.1</private-api-sdk-java.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <ch-kafka.version>3.0.1</ch-kafka.version>
+        <api-sdk-manager-java-library.version>3.0.5</api-sdk-manager-java-library.version>
+        <private-api-sdk-java.version>4.0.9</private-api-sdk-java.version>
+        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
 
-        <spring-boot-dependencies.version>3.1.5</spring-boot-dependencies.version>
-        <spring-boot-maven-plugin.version>2.5.5</spring-boot-maven-plugin.version>
+        <spring-boot-dependencies.version>3.2.4</spring-boot-dependencies.version>
+        <spring-boot-maven-plugin.version>3.2.4</spring-boot-maven-plugin.version>
 
         <snakeyaml.version>2.2</snakeyaml.version>
 
         <!-- Docker -->
-        <jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
+        <jib-maven-plugin.version>3.4.1</jib-maven-plugin.version>
+
+        <!-- command line args -->
+        <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
     </properties>
 
     <dependencyManagement>
@@ -55,6 +62,10 @@
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>private-api-sdk-java</artifactId>
             <version>${private-api-sdk-java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -91,14 +102,21 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>${hamcrest-all-version}</version>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
+            <version>3.0.13</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.pcollections</groupId>
+                    <artifactId>pcollections</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -118,9 +136,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>${commons.lang.version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
@@ -201,6 +219,13 @@
                     <container>
                         <expandClasspathDependencies>true</expandClasspathDependencies>
                     </container>
+                    <from>
+                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
+                    </from>
+                    <to>
+                        //Once the pipeline is moved to shared services need to update this to image reference from shared services
+                        <image>169942020521.dkr.ecr.eu-west-1.amazonaws.com/local/chd-order-consumer:latest</image>
+                    </to>
                 </configuration>
             </plugin>
 
